--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,3 +1,17 @@
+::-webkit-scrollbar {
+  width: 4px;
+  height: 5px;
+}
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 2px #c4cad4;
+  background: #c4cad4;
+  border-radius: 8px;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 2px lightgrey;
+  border-radius: 8px;
+}
+
 .main-header::-webkit-scrollbar {
   width: 6px;
   height: 5px;
