--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,18 +4,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #4a4a4a; /* Darker text for better readability */
 }
 
@@ -48,12 +38,6 @@ button {
   .main-header li {
     margin: 1rem auto;
     width: 50rem;
-  }
-}
-
-@media screen and (max-width: 1080px) {
-  .form-container {
-    width: auto;
   }
 }
 
