--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #4a4a4a; /* Darker text for better readability */
+  /* color: #4a4a4a; */
 }
 
 ul {
